
v 8.12.0 (unreleased)
  - Add two-factor recovery endpoint to internal API !5510
  - Change merge_error column from string to text type
  - Add `web_url` field to issue, merge request, and snippet API objects (Ben Boeckel)
  - Set path for all JavaScript cookies to honor GitLab's subdirectory setting !5627 (Mike Greiling)
  - Optimistic locking for Issues and Merge Requests (title and description overriding prevention)
  - Add `wiki_page_events` to project hook APIs (Ben Boeckel)
  - Add Sentry logging to API calls
  - Automatically expand hidden discussions when accessed by a permalink !5585 (Mike Greiling)
  - Added tests for diff notes
  - Added 'only_allow_merge_if_build_succeeds' project setting in the API. !5930 (Duck)
  - Reduce number of database queries on builds tab
  - Use the default branch for displaying the project icon instead of master !5792 (Hannes Rosenögger)
  - Adds response mime type to transaction metric action when it's not HTML

v 8.11.2 (unreleased)
  - Show "Create Merge Request" widget for push events to fork projects on the source project

v 8.11.1 (unreleased)
  - Does not halt the GitHub import process when an error occurs
  - Fix file links on project page when default view is Files !5933
  - Change using size to use count and caching it for number of group members

v 8.11.0
  - Use test coverage value from the latest successful pipeline in badge. !5862
  - Add test coverage report badge. !5708
  - Remove the http_parser.rb dependency by removing the tinder gem. !5758 (tbalthazar)
  - Add Koding (online IDE) integration
  - Ability to specify branches for Pivotal Tracker integration (Egor Lynko)
  - Fix don't pass a local variable called `i` to a partial. !20510 (herminiotorres)
  - Add delimiter to project stars and forks count (ClemMakesApps)
  - Fix rename `add_users_into_project` and `projects_ids`. !20512 (herminiotorres)
  - Fix adding line comments on the initial commit to a repo !5900